@@ -713,7 +713,12 @@ namespace fim
 		/*
 		 * all of the commands in the record buffer are re-executed.
 		 * */
-		execute_internal(dump_record_buffer(args).c_str(),FIM_X_NULL);
+		if(recordMode_==Normal)
+		{
+			recordMode_=Playing;
+			execute_internal(dump_record_buffer(args).c_str(),FIM_X_NULL);
+			recordMode_=Normal;
+		}
 		/* for unknown reasons, the following code gives problems : image resizes don't work..
 		 * but the present (above) doesn't support interruptions ...
 		 * */
@@ -799,8 +804,12 @@ nop:
 		/*
 		 * recording of commands starts here
 		 * */
-		recorded_actions_.clear();
-		recordMode_=true;
+		if(recordMode_==Normal)
+		{
+			recorded_actions_.clear();
+			recordMode_=Recording;
+			record_action("");
+		}
 		return FIM_CNS_EMPTY_RESULT;
 	}
 
@@ -809,8 +818,8 @@ nop:
 		/*
 		 * since the last recorded action was stop_recording, we pop out the last command
 		 */
-		if(recorded_actions_.size()>0)recorded_actions_.pop_back();
-		recordMode_=false;
+		if(recordMode_==Recording)
+			recordMode_=Normal;
 		return FIM_CNS_EMPTY_RESULT;
 	}
 
